apps/libreddit/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libreddit
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: libreddit
  template:
    metadata:
      labels:
        app.kubernetes.io/name: libreddit
    spec:
      enableServiceLinks: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: libreddit
        image: spikecodes/libreddit:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        # env:
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        # resources:
        # readinessProbe:
        #   httpGet:
        #     port: containerPort
        #     path: /
        # livenessProbe:
        #   httpGet:
        #     port: containerPort
        #     path: /
        #   initialDelaySeconds: 15
      restartPolicy: Always
