apps/libreddit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: libreddit
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
  selector:
    app.kubernetes.io/name: libreddit
