apps/libreddit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: libreddit
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - libreddit.samcday.com
    secretName: libreddit-tls
  rules:
  - host: libreddit.samcday.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: libreddit
            port:
              number: 8080
